# Mid_PredictArtPrice

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
01_dataPreparation/: add_id_column.py  batch_extract.py  batch_extract_exclude.py  download_images.py  filter_data.py  remove_duplicates.py  sanitize_csv.py
01_dataPreparation/dashboard/: dashboard.html  serve_dashboard.py
02_embedding/: app.py  benchmark_models.py  clusterPrompt.md  process_auction_data.py  retrain_fnn.py  train_auction_models.py  train_cluster_models.py
02_embedding/models/: best_image_only.pkl  best_model_meta.json  best_multimodal.pkl  cluster_image_only_model_0.pkl  cluster_image_only_model_1.pkl  cluster_image_only_model_2.pkl  cluster_image_only_model_3.pkl  cluster_image_only_model_4.pkl  cluster_image_only_model_5.pkl  cluster_image_only_model_6.pkl  cluster_image_only_model_7.pkl  cluster_image_only_model_8.pkl  cluster_image_only_model_9.pkl  cluster_metadata_image_only.json  cluster_metadata_multimodal.json  cluster_models_meta_image_only.json  cluster_models_meta_multimodal.json  cluster_multimodal_model_0.pkl  cluster_multimodal_model_1.pkl  cluster_multimodal_model_2.pkl  cluster_multimodal_model_3.pkl  cluster_multimodal_model_4.pkl  cluster_multimodal_model_5.pkl  cluster_multimodal_model_6.pkl  cluster_multimodal_model_7.pkl  cluster_multimodal_model_8.pkl  cluster_multimodal_model_9.pkl  clusters_image_only.npy  (+20 more)
03_elaborating/: km_paintings.csv  km_price_predictions.csv  predict_km_paintings.py  prepare_km_dataset.py  visualize_km_results.py
