[project]
name = "mid-predictartprice"
version = "0.1.0"
description = "Add your description here"
readme = "README_fix.md"
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "einops>=0.8.2",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
